# mini-risc-v-kernel

./: CMakeLists.txt  README.md  linker.ld
cmake/: riscv-toolchain.cmake
include/: doubly_linked_list.h  io.h  physical_memory.h  print.h  process_control_block.h  uart_def.h  version.h
include/memory/: buddy_allocator.h  permanent_allocator.h
scripts/: qemu.sh  read_elf.sh  read_objdump.sh  read_sections.sh
src/: boot.s  context_switch.s  io.c  io.s  kernel.c  print_string.s  uart_def.s
src/memory/: permanent_allocator.c
